<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_training"
            android:title="@string/trainings" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_exam_black_24dp"
            android:title="@string/exams" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_graduation"
            android:title="@string/graduations" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_certificate"
            android:title="@string/certifications" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Upload" />
        </menu>
    </item>

</menu>
