<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.TrainingDetailsFragment">

        <android.support.v7.widget.CardView
            android:id="@+id/card_training_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/training_detail_cards_margin_left_right"
            android:layout_marginRight="@dimen/training_detail_cards_margin_left_right"
            android:layout_marginTop="@dimen/spacing_medium">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.expansion.lg.kimaru.training.utils.ProportionalImageView
                    android:id="@+id/image_training_detail_poster"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_training_poster"
                    tools:src="@mipmap/ic_launcher"/>

                <TextView
                    android:id="@+id/text_training_name"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/image_training_detail_poster"
                    android:layout_toEndOf="@+id/image_training_detail_poster"
                    android:layout_toRightOf="@+id/image_training_detail_poster"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="3"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="16dp"
                    tools:text="Original movie title"/>

                <TextView
                    android:id="@+id/text_movie_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/spacing_medium"
                    android:layout_toEndOf="@+id/image_training_detail_poster"
                    android:layout_toRightOf="@+id/image_training_detail_poster"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:textSize="42sp"
                    tools:text="10.0"/>

                <TextView
                    android:id="@+id/text_movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image_training_detail_poster"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_toEndOf="@+id/image_training_detail_poster"
                    android:layout_toRightOf="@+id/image_training_detail_poster"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    tools:text="Release date: 08.10.2015"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_training_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/training_detail_cards_margin_left_right"
            android:layout_marginRight="@dimen/training_detail_cards_margin_left_right"
            android:layout_marginTop="@dimen/spacing_small">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/text_training_overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trainig_detail_overview_title"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_training_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_training_overview_title"
                    android:paddingTop="@dimen/spacing_medium"
                    tools:text="A plot synopsis (called overview in the api)"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dets"
            android:layout_below="@+id/card_movie_overview"
            android:orientation="horizontal" >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chart1View"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/traineesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/trainees_title" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/trainees_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/chart2View"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/sessionsButton"
                    android:text="@string/sessions_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/session_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linecharts"
            android:layout_below="@+id/dets"
            android:padding="@dimen/spacing_medium">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_attendance"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>